--- a/spring-cloud-config-client/src/main/resources/bootstrap.properties
+++ b/spring-cloud-config-client/src/main/resources/bootstrap.properties
@@ -14,6 +14,9 @@ spring.application.name=user-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 
-spring.security.user.name=jmxjava
-spring.security.user.password=jmxhello 
+spring.security.basic.enabled=true
+spring.security.user.name=app01
+spring.security.user.password=passwd01
+
+
 
