--- a/spring-cloud-eureka-client/pom.xml
+++ b/spring-cloud-eureka-client/pom.xml
@@ -51,6 +51,20 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+	 <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+	 <dependency>
+	 	<groupId>org.springframework.boot</groupId>
+	 	<artifactId>spring-boot-configuration-processor</artifactId>
+	 	<optional>true</optional>
+	 </dependency>
 	</dependencies>
 
 	<dependencyManagement>
