--- a/spring-cloud-eureka-client/src/main/resources/application.properties
+++ b/spring-cloud-eureka-client/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=user-consumer
 server.port=8763
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+feign.httpclient.enabled=true
